octopus-tentacle/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopus-tentacle
  labels:
    app: octopus-tentacle
spec:
  selector:
    matchLabels:
      app: octopus-tentacle
  replicas: 1
  template:
    metadata:
      labels:
        app: octopus-tentacle
    spec:
      containers:
      - name: octopus-tentacle
        image: registry.internal.durp.info/octopusdeploy/tentacle:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true 
        ports:
        - name: http
          containerPort: 10933
