octopus-tentacle/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octopus-tentacle
spec:
  ports:
  - name: http
    port: 10933
    targetPort: 10933
    protocol: TCP
  type: LoadBalancer
  selector:
    app: octopus-tentacle
