octopus-tentacle/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: octopus-tentacle-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`octopus-tentacle.internal.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: octopus-tentacle
      port: 10933
  tls:
    secretName: octopus-tentacle-tls
